Login Page prototype.

--- a/Ellevo.mobile.app/Ellevo.mobile.app/StartPage.xaml
+++ b/Ellevo.mobile.app/Ellevo.mobile.app/StartPage.xaml
@@ -7,10 +7,10 @@
 
     <StackLayout BackgroundColor="#D0CAC8">
       <StackLayout.Children>
-        <StackLayout VerticalOptions="Start" HorizontalOptions="Center" Padding="0, 40, 0, 0">
-          <!--<Image Source="{local:ImageResource Ellevo.mobile.app.images.logomobile-150x150-01.png}"
+        <StackLayout VerticalOptions="Start" HorizontalOptions="Center" Padding="0, 30, 0, 0">
+          <Image Source="{local:ImageResource Ellevo.mobile.app.images.logomobile-150x150-01.png}"
                  HeightRequest="150"
-                 WidthRequest="150"/>-->
+                 WidthRequest="150"/>
 
         </StackLayout>
         <!--
