--- a/Ellevo.mobile.app/Ellevo.mobile.app/StartPage.xaml
+++ b/Ellevo.mobile.app/Ellevo.mobile.app/StartPage.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:Ellevo.mobile.app;assembly=Ellevo.mobile.app"
              x:Class="Ellevo.mobile.app.StartPage"
-             Title="Acesso">
+             Title="Página Inicial">
+  
   <ContentPage.Content>
     <ScrollView>
     <StackLayout BackgroundColor="#D0CAC8">
@@ -14,12 +15,7 @@
                  WidthRequest="150"/>
 
         </StackLayout>
-        <!--
-        BackgroundColor="#2DBDB6"
-        HeightRequest="200"
-        WidthRequest="200"
-        -->
-
+        
         <StackLayout VerticalOptions="CenterAndExpand" Padding="0, 50, 0, 0">
 
           <StackLayout Padding="0, 0, 0, 40" BackgroundColor="#D0CAC8" VerticalOptions="Start">
@@ -42,7 +38,7 @@
                  Text="Informe a URL de acesso ao sistema"
                  Completed="OnEntryCompleted"
                  />
-          <StackLayout HorizontalOptions="End"  Padding="0, 100, 0, 0">
+          <StackLayout HorizontalOptions="Center"  Padding="0, 100, 0, 0">
             <Button Text="Confirma"
                     BackgroundColor="#2DBDB6"
                     FontSize="Large"
