--- a/Ellevo.mobile.app/Ellevo.mobile.app/pages/ListaInstrucoes.xaml
+++ b/Ellevo.mobile.app/Ellevo.mobile.app/pages/ListaInstrucoes.xaml
@@ -1,57 +1,40 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Ellevo.mobile.app.ListaInstrucoes">
+             xmlns:local="clr-namespace:Ellevo.mobile.app;assembly=Ellevo.mobile.app"
+             x:Class="Ellevo.mobile.app.ListaInstrucoes"
+             Title="Instruções">
+  <!--BackgroundImage="splash1536x2048.png">-->
   <ContentPage.Padding>
     <OnPlatform x:TypeArguments="Thickness" iOS="10, 20, 10, 0" Android="10, 0" WinPhone="10, 0" />
   </ContentPage.Padding>
   <StackLayout>
-    <ListView x:Name="listView" VerticalOptions="StartAndExpand">
-      <!--<ListView.ItemsSource>
-        <x:Array Type="{x:Type Color}">
-          <x:Static Member="Color.Aqua" />
-          <x:Static Member="Color.Black" />
-          <x:Static Member="Color.Blue" />
-          <x:Static Member="Color.Fuchsia" />
-          <x:Static Member="Color.Gray" />
-          <x:Static Member="Color.Green" />
-          <x:Static Member="Color.Lime" />
-          <x:Static Member="Color.Maroon" />
-          <Color>Navy</Color>
-          <Color>Olive</Color>
-          <Color>Pink</Color>
-          <Color>Purple</Color>
-          <Color>Red</Color>
-          <Color>Silver</Color>
-          <Color>Teal</Color>
-          <Color>White</Color>
-          <Color>Yellow</Color>
-        </x:Array>
-      </ListView.ItemsSource>-->
-
-      <!--<ListView.SelectedItem>
-        <Color>Lime</Color>
-      </ListView.SelectedItem>-->
+    <ListView x:Name="listView" HasUnevenRows="True" SeparatorVisibility="Default" SeparatorColor="Black">
       <ListView.ItemTemplate>
         <DataTemplate>
           <ViewCell>
-
-            <StackLayout Padding="10, 10, 0, 0">
-              <Label Text="{Binding Color}" />
+            <StackLayout Padding="0,0,0,10">
+              <Grid Padding="5" VerticalOptions="Fill">
+                <Grid.ColumnDefinitions>
+                  <ColumnDefinition Width="Auto"/>
+                  <ColumnDefinition Width="Auto"/>
+                  <!--<ColumnDefinition Width="30"/>-->
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                  <RowDefinition Height="Auto"></RowDefinition>
+                  <RowDefinition Height="Auto"></RowDefinition>
+                  <RowDefinition Height="Auto"></RowDefinition>
+                </Grid.RowDefinitions>
+                <Label Grid.Row="0" Grid.Column="0" Text="{Binding Origem, StringFormat='{0}'}" FontAttributes="Bold" FontSize="Large"/>
+                <Label Grid.Row="0" Grid.Column="1" Text="{Binding OrigemNumero, StringFormat='{0}'}" FontAttributes="Bold, Italic" FontSize="Large"/>
+                <!--<Image Grid.Row="0" Grid.Column="2" Source="{local:ImageResource Ellevo.mobile.app.images.phone-512.png}" HeightRequest="30" WidthRequest="30" HorizontalOptions="End"/>-->
+                <Label Grid.Row="1"  Grid.Column="0" Text="{Binding Remetente, StringFormat='Remetente: {0}'}" FontSize="Medium" LineBreakMode="TailTruncation"/>
+                <Label Grid.Row="2"  Grid.Column="0" Text="{Binding Titulo, StringFormat='Título: {0}'}"  FontSize="Medium"/>
+              </Grid>
             </StackLayout>
-
           </ViewCell>
         </DataTemplate>
       </ListView.ItemTemplate>
     </ListView>
-
-
-    
-    <!--<BoxView x:Name="boxView"
-             Color="{Binding Source={x:Reference listView},
-             Path=SelectedItem}"
-             HeightRequest="100" />-->
-
-
   </StackLayout>
 </ContentPage>
