--- a/Ellevo.mobile.app/Ellevo.mobile.app/pages/LoginPage.xaml
+++ b/Ellevo.mobile.app/Ellevo.mobile.app/pages/LoginPage.xaml
@@ -4,66 +4,67 @@
              xmlns:local="clr-namespace:Ellevo.mobile.app;assembly=Ellevo.mobile.app"
              x:Class="Ellevo.mobile.app.LoginPage"
              Title="Login">
+  <!--BackgroundImage="splash1536x2048.png">-->
   <ContentPage.Content>
     <ScrollView>
-    <StackLayout BackgroundColor="#D0CAC8">
-      <StackLayout.Children>
-        <StackLayout VerticalOptions="Start" HorizontalOptions="Center" Padding="0, 30, 0, 0">
-          <Image Source="{local:ImageResource Ellevo.mobile.app.images.logomobile-150x150-01.png}"
-                 HeightRequest="150"
-                 WidthRequest="150"/>
-        </StackLayout>
-        <!--Container do login-->
-        <StackLayout Padding="0, 50, 0, 0" VerticalOptions="Start" HorizontalOptions="Center">
-          <Label x:Name="lblRestrito" Text="ACESSO RESTRITO" HorizontalTextAlignment="Center"
-                 VerticalTextAlignment="Start"
-                 FontAttributes="Bold"
-                 FontSize="Medium"
-                 TextColor="Black"
-                 VerticalOptions="Start"/>
-          <Label x:Name="lblMessageUsuSenha" Text="Digite o seu usuário e senha para acessar:" HorizontalTextAlignment="Center"
+      <StackLayout>
+        <StackLayout.Children>
+          <StackLayout VerticalOptions="Start" HorizontalOptions="Center" Padding="0, 30, 0, 0">
+            <Image Source="{local:ImageResource Ellevo.mobile.app.images.logomobile150x15001.png}"
+                   HeightRequest="150"
+                   WidthRequest="150"/>
+          </StackLayout>
+          <!--Container do login-->
+          <StackLayout Padding="0, 50, 0, 0" VerticalOptions="Start" HorizontalOptions="Center">
+            <Label x:Name="lblRestrito" Text="ACESSO RESTRITO" HorizontalTextAlignment="Center"
                    VerticalTextAlignment="Start"
-                   FontAttributes="Italic"
-                   FontSize="Small"
+                   FontAttributes="Bold"
+                   FontSize="Medium"
                    TextColor="Black"
                    VerticalOptions="Start"/>
-          <!--Caixa de login-->
-          <ScrollView>
-            <StackLayout x:Name="boxLogin" VerticalOptions="StartAndExpand" Padding="0, 20, 0, 0" >
-              <Label x:Name="lblDominio" Text="" HorizontalTextAlignment="Start"
-                               VerticalTextAlignment="Start"
-                               FontAttributes="Bold"
-                               FontSize="Small"
-                               TextColor="Black"/>
-              <Entry x:Name="txtUsuario" Placeholder="Usuario"
-                       FontSize="Default"
-                       TextColor="Black"
-              Keyboard="Default"/>
-              <Entry x:Name="txtSenha" Placeholder="Senha"
-                               FontSize="Default"
-                               TextColor="Black"
-              Keyboard="Default"
-              IsPassword="True"/>
+            <Label x:Name="lblMessageUsuSenha" Text="Digite o seu usuário e senha para acessar:" HorizontalTextAlignment="Center"
+                     VerticalTextAlignment="Start"
+                     FontAttributes="Italic"
+                     FontSize="Small"
+                     TextColor="Black"
+                     VerticalOptions="Start"/>
+            <!--Caixa de login-->
+            <ScrollView>
+              <StackLayout x:Name="boxLogin" VerticalOptions="StartAndExpand" Padding="0, 20, 0, 0" >
+                <Label x:Name="lblDominio" Text="" HorizontalTextAlignment="Start"
+                                 VerticalTextAlignment="Start"
+                                 FontAttributes="Bold"
+                                 FontSize="Small"
+                                 TextColor="Black"/>
+                <Entry x:Name="txtUsuario" Placeholder="Usuario"
+                         FontSize="Default"
+                         TextColor="Black"
+                Keyboard="Default"/>
+                <Entry x:Name="txtSenha" Placeholder="Senha"
+                                 FontSize="Default"
+                                 TextColor="Black"
+                Keyboard="Default"
+                IsPassword="True"/>
+              </StackLayout>
+            </ScrollView>
+            <!--Caixa do botão ENTRAR-->
+            <StackLayout HorizontalOptions="Center" Padding="0, 20, 0, 0">
+              <Button x:Name="btnEntrar" Text="ENTRAR"
+                      BackgroundColor="#2DBDB6"
+                      FontSize="Medium"
+                      TextColor="White"
+                      HorizontalOptions="End"
+                      VerticalOptions="Center"
+                      WidthRequest="100"
+                      HeightRequest="50"
+                      BorderWidth="0"
+                      BorderColor="Transparent"
+                      Clicked="OnEnterClicked"/>
             </StackLayout>
-          </ScrollView>
-          <!--Caixa do botão ENTRAR-->
-          <StackLayout HorizontalOptions="Center" Padding="0, 20, 0, 0">
-            <Button x:Name="btnEntrar" Text="ENTRAR"
-                    BackgroundColor="#2DBDB6"
-                    FontSize="Medium"
-                    TextColor="White"
-                    HorizontalOptions="End"
-                    VerticalOptions="Center"
-                    WidthRequest="100"
-                    HeightRequest="50"
-                    BorderWidth="0"
-                    BorderColor="Transparent"
-                    Clicked="OnEnterClicked"/>
-          </StackLayout>
 
-        </StackLayout>
-      </StackLayout.Children>
-    </StackLayout>
+          </StackLayout>
+        </StackLayout.Children>
+      </StackLayout>
     </ScrollView>
   </ContentPage.Content>
 </ContentPage>
