Tarefas e Chamados pronto.

--- a/Ellevo.mobile.app/Ellevo.mobile.app/pages/ListaAprovacoes.xaml
+++ b/Ellevo.mobile.app/Ellevo.mobile.app/pages/ListaAprovacoes.xaml
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:Ellevo.mobile.app;assembly=Ellevo.mobile.app"
-             x:Class="Ellevo.mobile.app.ListaInstrucoes"
-             Title="Instruções"
-             BackgroundImage="fundosemlogo.png">
+             x:Class="Ellevo.mobile.app.pages.ListaAprovacoes"
+  xmlns:local="clr-namespace:Ellevo.mobile.app;assembly=Ellevo.mobile.app"
+  Title="Aprovações">
+  <!--BackgroundImage="splash1536x2048.png">-->
   <ContentPage.Padding>
     <OnPlatform x:TypeArguments="Thickness" iOS="10, 20, 10, 0" Android="10, 0" WinPhone="10, 0" />
   </ContentPage.Padding>
