--- a/Ellevo.mobile.app/Ellevo.mobile.app/pages/ListaAcompanhamentos.xaml
+++ b/Ellevo.mobile.app/Ellevo.mobile.app/pages/ListaAcompanhamentos.xaml
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:Ellevo.mobile.app;assembly=Ellevo.mobile.app"
-             x:Class="Ellevo.mobile.app.ListaInstrucoes"
-             Title="Instruções"
+             x:Class="Ellevo.mobile.app.pages.ListaAcompanhamentos"
+  xmlns:local="clr-namespace:Ellevo.mobile.app;assembly=Ellevo.mobile.app"
+  Title="Acompanhamentos"
              BackgroundImage="fundosemlogo.png">
   <ContentPage.Padding>
     <OnPlatform x:TypeArguments="Thickness" iOS="10, 20, 10, 0" Android="10, 0" WinPhone="10, 0" />
@@ -25,11 +25,10 @@
                   <RowDefinition Height="Auto"></RowDefinition>
                   <RowDefinition Height="Auto"></RowDefinition>
                 </Grid.RowDefinitions>
-                <Label Grid.Row="0" Grid.Column="0" Text="{Binding Origem, StringFormat='{0}'}" FontAttributes="Bold" FontSize="Large"/>
-                <Label Grid.Row="0" Grid.Column="1" Text="{Binding OrigemNumero, StringFormat='{0}'}" FontAttributes="Bold, Italic" FontSize="Large"/>
+                <Label Grid.Row="0" Grid.Column="0" Text="{Binding ContaId, StringFormat='Conta Id: {0}'}" FontAttributes="Bold" FontSize="Large"/>
+                <Label Grid.Row="1" Grid.Column="0" Text="{Binding RazaoSocial, StringFormat='Razão Social: {0}'}" FontAttributes="Bold, Italic" FontSize="Medium"/>
                 <!--<Image Grid.Row="0" Grid.Column="2" Source="{local:ImageResource Ellevo.mobile.app.images.phone-512.png}" HeightRequest="30" WidthRequest="30" HorizontalOptions="End"/>-->
-                <Label Grid.Row="1"  Grid.Column="0" Text="{Binding Remetente, StringFormat='Remetente: {0}'}" FontSize="Medium" LineBreakMode="TailTruncation"/>
-                <Label Grid.Row="2"  Grid.Column="0" Text="{Binding Titulo, StringFormat='Título: {0}'}"  FontSize="Medium"/>
+                <Label Grid.Row="2"  Grid.Column="0" Text="{Binding NomeFantasia, StringFormat='Nome fantasia: {0}'}"  FontSize="Medium"/>
               </Grid>
             </StackLayout>
           </ViewCell>
