--- a/Ellevo.mobile.app/Ellevo.mobile.app/pages/StartPage.xaml
+++ b/Ellevo.mobile.app/Ellevo.mobile.app/pages/StartPage.xaml
@@ -3,8 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:Ellevo.mobile.app;assembly=Ellevo.mobile.app"
              x:Class="Ellevo.mobile.app.StartPage"
-             Title="Página Inicial">
-  <!--BackgroundImage="splash1536x2048.png">-->
+             Title="Página Inicial"
+  BackgroundImage="fundosemlogo.png">
   <ContentPage.Content>
     <ScrollView>
       <StackLayout>
