Ajustes nas telas de Login e entrada.

--- a/Ellevo.mobile.app/Ellevo.mobile.app/pages/LoginPage.xaml
+++ b/Ellevo.mobile.app/Ellevo.mobile.app/pages/LoginPage.xaml
@@ -39,12 +39,14 @@
                 <Entry x:Name="txtUsuario" Placeholder="Usuario"
                          FontSize="Default"
                          TextColor="Black"
-                Keyboard="Default"/>
+                         Keyboard="Default"
+                         Completed="OnUserEntryCompleted"/>
                 <Entry x:Name="txtSenha" Placeholder="Senha"
                                  FontSize="Default"
                                  TextColor="Black"
                 Keyboard="Default"
-                IsPassword="True"/>
+                IsPassword="True"
+                       Completed="OnPassEntryCompleted"/>
               </StackLayout>
             </ScrollView>
             <!--Caixa do botão ENTRAR-->
