--- a/Ellevo.mobile.app/Ellevo.mobile.app/pages/ListaAprovacoes.xaml
+++ b/Ellevo.mobile.app/Ellevo.mobile.app/pages/ListaAprovacoes.xaml
@@ -3,8 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Ellevo.mobile.app.pages.ListaAprovacoes"
   xmlns:local="clr-namespace:Ellevo.mobile.app;assembly=Ellevo.mobile.app"
-  Title="Aprovações">
-  <!--BackgroundImage="splash1536x2048.png">-->
+  Title="Aprovações"
+  BackgroundImage="fundosemlogo.png">
   <ContentPage.Padding>
     <OnPlatform x:TypeArguments="Thickness" iOS="10, 20, 10, 0" Android="10, 0" WinPhone="10, 0" />
   </ContentPage.Padding>
