--- a/Ellevo.mobile.app/Ellevo.mobile.app/pages/StartPage.xaml
+++ b/Ellevo.mobile.app/Ellevo.mobile.app/pages/StartPage.xaml
@@ -32,10 +32,11 @@
                  HorizontalTextAlignment="Center"
                  VerticalOptions="Center"/>-->
             <Entry x:Name="URL"
-                   Placeholder="Url"
+                   Placeholder="Informe a URL de acesso ao sistema"
                    Keyboard="Url"
-                   Text="Informe a URL de acesso ao sistema"
-                   Completed="OnEntryCompleted"/>
+                   TextChanged="OnTextChanged"
+                   Completed="OnEntryCompleted"
+                   />
             <StackLayout HorizontalOptions="Center"  Padding="0, 100, 0, 0">
               <Button x:Name="btnConfirma" Text="Confirma"
                       BackgroundColor="#2DBDB6"
