--- a/Ellevo.mobile.app/Ellevo.mobile.app/pages/ListaInstrucoes.xaml
+++ b/Ellevo.mobile.app/Ellevo.mobile.app/pages/ListaInstrucoes.xaml
@@ -25,11 +25,11 @@
                   <RowDefinition Height="Auto"></RowDefinition>
                   <RowDefinition Height="Auto"></RowDefinition>
                 </Grid.RowDefinitions>
-                <Label Grid.Row="0" Grid.Column="0" Text="{Binding Origem, StringFormat='{0}'}" FontAttributes="Bold" FontSize="Large"/>
-                <Label Grid.Row="0" Grid.Column="1" Text="{Binding OrigemNumero, StringFormat='{0}'}" FontAttributes="Bold, Italic" FontSize="Large"/>
+                <Label Grid.Row="0" Grid.Column="0" Text="{Binding Origem, StringFormat='{0}'}" FontAttributes="Bold" FontSize="Medium" TextColor="Black"/>
+                <Label Grid.Row="0" Grid.Column="1" Text="{Binding OrigemNumero, StringFormat='{0}'}" FontAttributes="Bold" FontSize="Medium" HorizontalOptions="Start" TextColor="Black"/>
                 <!--<Image Grid.Row="0" Grid.Column="2" Source="{local:ImageResource Ellevo.mobile.app.images.phone-512.png}" HeightRequest="30" WidthRequest="30" HorizontalOptions="End"/>-->
-                <Label Grid.Row="1"  Grid.Column="0" Text="{Binding Remetente, StringFormat='Remetente: {0}'}" FontSize="Medium" LineBreakMode="TailTruncation"/>
-                <Label Grid.Row="2"  Grid.Column="0" Text="{Binding Titulo, StringFormat='Título: {0}'}"  FontSize="Medium"/>
+                <Label Grid.Row="1"  Grid.Column="0" Text="{Binding Remetente, StringFormat='Remetente: {0}'}" FontSize="14" LineBreakMode="TailTruncation" TextColor="Black"/>
+                <Label Grid.Row="2"  Grid.Column="0" Text="{Binding Titulo, StringFormat='Título: {0}'}"  FontSize="14" TextColor="Black"/>
               </Grid>
             </StackLayout>
           </ViewCell>
