--- a/Ellevo.mobile.app/Ellevo.mobile.app/pages/lists/ListaInstrucoes.xaml
+++ b/Ellevo.mobile.app/Ellevo.mobile.app/pages/lists/ListaInstrucoes.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Ellevo.mobile.app.ListaInstrucoes"
-             Title="Instruções"
+             Title="Lista de Instruções"
              BackgroundImage="fundosemlogo.png">
   <ContentPage.Padding>
     <OnPlatform x:TypeArguments="Thickness" iOS="10, 20, 10, 0" Android="10, 0" WinPhone="10, 0" />
