--- a/Ellevo.mobile.app/Ellevo.mobile.app/pages/lists/ListaProvidencias.xaml
+++ b/Ellevo.mobile.app/Ellevo.mobile.app/pages/lists/ListaProvidencias.xaml
@@ -2,8 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Ellevo.mobile.app.pages.ListaProvidencias"
-  xmlns:local="clr-namespace:Ellevo.mobile.app;assembly=Ellevo.mobile.app"
-  Title="Providencias"
+             Title="Providencias"
              BackgroundImage="fundosemlogo.png">
   <ContentPage.Padding>
     <OnPlatform x:TypeArguments="Thickness" iOS="10, 20, 10, 0" Android="10, 0" WinPhone="10, 0" />
@@ -24,12 +23,12 @@
                   <RowDefinition Height="Auto"></RowDefinition>
                   <RowDefinition Height="Auto"></RowDefinition>
                   <RowDefinition Height="Auto"></RowDefinition>
+                  <RowDefinition Height="Auto"></RowDefinition>
                 </Grid.RowDefinitions>
-                <Label Grid.Row="0" Grid.Column="0" Text="{Binding Origem, StringFormat='{0}'}" FontAttributes="Bold" FontSize="Large"/>
-                <Label Grid.Row="0" Grid.Column="1" Text="{Binding OrigemNumero, StringFormat='{0}'}" FontAttributes="Bold, Italic" FontSize="Large"/>
-                <!--<Image Grid.Row="0" Grid.Column="2" Source="{local:ImageResource Ellevo.mobile.app.images.phone-512.png}" HeightRequest="30" WidthRequest="30" HorizontalOptions="End"/>-->
-                <Label Grid.Row="1"  Grid.Column="0" Text="{Binding Remetente, StringFormat='Remetente: {0}'}" FontSize="Medium" LineBreakMode="TailTruncation"/>
-                <Label Grid.Row="2"  Grid.Column="0" Text="{Binding Titulo, StringFormat='Título: {0}'}"  FontSize="Medium"/>
+                <Label Grid.Row="0" Grid.Column="0" Text="{Binding TarefaId, StringFormat='Tarefa: {0}'}" FontAttributes="Bold" FontSize="Medium" TextColor="Black"/>
+                <Label Grid.Row="1" Grid.Column="0" Text="{Binding NomeCliente, StringFormat='Cliente: {0}'}" FontAttributes="Bold" FontSize="Medium" HorizontalOptions="Start" TextColor="Black"/>
+                <Label Grid.Row="2"  Grid.Column="0" Text="{Binding Vencimento, StringFormat='Vencimento: {0}'}" FontSize="14" LineBreakMode="TailTruncation" TextColor="Black"/>
+                <Label Grid.Row="3"  Grid.Column="0" Text="{Binding Titulo, StringFormat='Título: {0}'}"  FontSize="14" TextColor="Black"/>
               </Grid>
             </StackLayout>
           </ViewCell>
