--- a/Ellevo.mobile.app/Ellevo.mobile.app/pages/itens/ContaDetalhe.xaml
+++ b/Ellevo.mobile.app/Ellevo.mobile.app/pages/itens/ContaDetalhe.xaml
@@ -22,7 +22,7 @@
                 <RowDefinition Height="*" />
               </Grid.RowDefinitions>
               <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="70" />
+                <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*" />
               </Grid.ColumnDefinitions>
 
