--- a/Ellevo.mobile.app/Ellevo.mobile.app/paginas/itens/TarefaDetalhe.xaml
+++ b/Ellevo.mobile.app/Ellevo.mobile.app/paginas/itens/TarefaDetalhe.xaml
@@ -8,11 +8,14 @@
     <OnPlatform x:TypeArguments="Thickness" iOS="10, 20, 10, 0" Android="10, 0" WinPhone="10, 0" />
   </ContentPage.Padding>
   <ContentPage.Content>
+    
     <ScrollView>
       <StackLayout>
         <StackLayout.Children>
+          
           <ScrollView>
             <Grid RowSpacing="0">
+              
               <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
                 <RowDefinition Height="*" />
@@ -31,7 +34,7 @@
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*" />
               </Grid.ColumnDefinitions>
-
+              
               <Label Grid.Row="0" Grid.Column="0" x:Name="lblOrigem" Text="Tarefa:" HorizontalTextAlignment="End" FontAttributes="Bold" HorizontalOptions="Fill"/>
 
               <Label Grid.Row="0" Grid.Column="1" x:Name="lblId" HorizontalTextAlignment="Start" HorizontalOptions="Start"/>
@@ -57,9 +60,10 @@
               <Label  Grid.Row="5"  Grid.Column="1" x:Name="lblStatusValor" HorizontalTextAlignment="Start" HorizontalOptions="Start"/>
 
               <Label  Grid.Row="6" Grid.Column="0" x:Name="lblDescValor" HorizontalTextAlignment="Start" HorizontalOptions="Start"/>
-
+              <ActivityIndicator x:Name="waitActivityIndicator" HorizontalOptions="Center" VerticalOptions="Center"/>
             </Grid>
           </ScrollView>
+          
         </StackLayout.Children>
       </StackLayout>
     </ScrollView>
